<resources>
    <string name="app_name">tp1_2</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="address">Address</string>
    <string name="delete">delete</string>
    <string name="accept">OK</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>